asg/tests/pass/tuples/typed.leo
function main() {
    let a: (bool, bool) = (true, false);
}