asg/tests/fail/integers/u16/min_fail.leo
function main() {
    let a: u16 = -1;
}